--- a/README
+++ b/README
@@ -2,11 +2,11 @@
 
 ## Introduction
 
-The Random Ayah Generator is a web-based application that dynamically displays a random Ayah (verse) from the Quran. This application includes the text translations, audio recitations, and navigation features that enhance the user's interaction with the content.
+The Random Ayah Generator is a web-based application that dynamically displays a random Ayah (verse) from the Quran. This application includes text translations, audio recitations, and navigation features that enhance the user's interaction with the content.
 
 ## Features
 
-- **Random Ayah Display:** Generates a random Ayah along with its Surah name,Chapter number,Ayah(verse) number and translation.
+- **Random Ayah Display:** Generates a random Ayah along with its Surah name, Chapter number, Ayah(verse) number, and translation.
 - **Audio Recitation:** Plays the audio recitation of the displayed Ayah.
 - **Smooth Navigation:** Provides a smooth scroll feature to view the Ayah seamlessly.
 - **Interactive Buttons:**
@@ -33,7 +33,7 @@ To run this application locally, follow these steps:
    git clone [git clone https://github.com/MONNK-CODE/Instant-Ayah.git]
 
 . **Dependencies**
-   Ensure you have internet access to fetch Ayahs from the AlQuran.cloud API and to load necessary scripts and stylesheets (FontAwesome, SweetAlert2, Google Fonts).
+   Ensure you have internet access to fetch Ayahs from the AlQuran.cloud API and load necessary scripts and stylesheets (FontAwesome, SweetAlert2, Google Fonts).
 
 ## Usage
 
