--- a/README
+++ b/README
@@ -49,4 +49,4 @@ Contributions to this project are welcome. Please fork the repository and submit
 
 ## License
 
-This project is licensed under the MIT License.
+This project is licensed under the MIT License
